# hhdmAnalysis-mestrado

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  metadata.json  pyproject.toml
examples/: read_hdf5.ipynb
hhdm_analysis/: fdeep.py  utils.py  wcorr.py
hhdm_analysis/mlp/: callbacks.py  methods.py  utils.py
hhdm_analysis/xgb/: controllers.py  utils.py
notebooks/: 0_deepcsv_vs_deepjet.ipynb  0_plot_btagging_corrections.ipynb  0_plot_variables_base.ipynb  0_plot_variables_regions.ipynb  1_prepare_mlp_data_multi_signal.ipynb  1_prepare_xgb_data_multi_signal.ipynb  1_prepare_xgb_data_one_signal.ipynb  2_find_hyperparams_xgb.ipynb  3_train_mlp.ipynb  3_train_xgb.ipynb  4_test_mlp.ipynb  4_test_xgb.ipynb  5_predict_datasets.ipynb  6_compare_mva_models.ipynb
